--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>IMD1005 Work</title>
+  <title>Taro Routly</title>
 </head>
 <body>
   <h1>
-    Welcome to IMD1005
+    Hello World!
   </h1>
 </body>
